<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. David de Andrés and Juan Carlos Ruiz, DISCA - UPV, Development of apps for mobile devices.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etSignInUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_sign_in_user_name" />

    <EditText
        android:id="@+id/etSignInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_sign_in_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etSignInRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_sign_in_repeat_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etSignInEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_sign_in_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/bSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_sign_in" />

</LinearLayout>
