<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. David de Andrés and Juan Carlos Ruiz, DISCA - UPV, Development of apps for mobile devices.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlFragmentLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/bLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/button_login" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/bLogin"
        android:ems="10"
        android:hint="@string/hint_user_name" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etUserName"
        android:layout_toLeftOf="@+id/bLogin"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

</RelativeLayout>
